--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 893ca00
-	trimbase = 
+	trim = rb1_base_pad
+	base = ce25f8e
+	trimbase = 893ca00
 	parent = upstream
 	previous = fb1fdf4
