--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d43df71
-	trimbase = 
+	trim = rb1_base_common
+	base = 22cfc9a
+	trimbase = d43df71
 	parent = upstream
 	previous = fb1fdf4
