--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ce25f8e
+	base = c2d2100
 	trimbase = 
 	parent = release/indigo/rb1_base_pad
-	previous = 
+	previous = ce25f8e
