--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cee34d2
+	base = 073f74e
 	trimbase = 
 	parent = debian/indigo/rb1_base_pad
-	previous = 
+	previous = cee34d2
