--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7125bc
+	base = b0cfa24
 	trimbase = 
 	parent = release/indigo/rb1_base_description
-	previous = 
+	previous = a7125bc
