--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 28f39b2
+	base = fa52048
 	trimbase = 
 	parent = debian/indigo/rb1_base_description
-	previous = 
+	previous = 28f39b2
