--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1b0904d
+	base = a24d7fb
 	trimbase = 
 	parent = debian/indigo/rb1_base_common
-	previous = 
+	previous = 1b0904d
