--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6cc0e86
+	base = 44cb358
 	trimbase = 
 	parent = rpm/indigo/rb1_base_pad
-	previous = 
+	previous = 6cc0e86
