--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6cc0e86
+	base = 1bda81c
 	trimbase = 
 	parent = rpm/indigo/rb1_base_pad
-	previous = 
+	previous = 6cc0e86
