--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ff10195
+	base = 766e854
 	trimbase = 
 	parent = rpm/indigo/rb1_base_description
-	previous = 
+	previous = ff10195
