--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 22cfc9a
+	base = 57681b0
 	trimbase = 
 	parent = release/indigo/rb1_base_common
-	previous = 
+	previous = 22cfc9a
