--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e3a9026
+	base = 4a050bf
 	trimbase = 
 	parent = rpm/indigo/rb1_base_common
-	previous = 
+	previous = e3a9026
