--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_description
 	base = a7125bc
-	trimbase = e11889b
+	trimbase = 
 	parent = upstream
 	previous = fb1fdf4
