--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_common
-	base = 633a893
-	trimbase = 
+	base = 191e9f1
+	trimbase = 633a893
 	parent = upstream
 	previous = 6c22901
