--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_description
-	base = 98094b0
-	trimbase = 
+	base = bc90e68
+	trimbase = 98094b0
 	parent = upstream
 	previous = 6c22901
