--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.2-0": ["Wed Jul 06 2016", "Roberto Guzm\u00e1n", "rguzman@robotnik.es"]}
+{"1.0.2-0": ["Wed Jul 06 2016", "Roberto Guzm\u00e1n", "rguzman@robotnik.es"], "1.0.3-0": ["Thu Jul 07 2016", "Roberto Guzm\u00e1n", "rguzman@robotnik.es"]}
