--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 991109e
-	trimbase = 
+	trim = rb1_base_pad
+	base = 88fa811
+	trimbase = 991109e
 	parent = upstream
 	previous = ad9f72f
