--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7aa6107
-	trimbase = 
+	trim = rb1_base_common
+	base = a56c49c
+	trimbase = 7aa6107
 	parent = upstream
 	previous = ad9f72f
