--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 90f61c3
+	base = 43d4810
 	trimbase = 
 	parent = debian/kinetic/rb1_base_description
-	previous = 
+	previous = 90f61c3
