--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 88fa811
+	base = e33b7e6
 	trimbase = 
 	parent = release/kinetic/rb1_base_pad
-	previous = 
+	previous = 88fa811
