--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 85764c7
+	base = 086d763
 	trimbase = 
 	parent = debian/kinetic/rb1_base_pad
-	previous = 
+	previous = 85764c7
