--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a56c49c
+	base = 67154e2
 	trimbase = 
 	parent = release/kinetic/rb1_base_common
-	previous = 
+	previous = a56c49c
