--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f488517
+	base = b064f36
 	trimbase = 
 	parent = debian/kinetic/rb1_base_common
-	previous = 
+	previous = f488517
