--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a655e75
+	base = d229a18
 	trimbase = 
 	parent = debian/kinetic/rb1_base_description
-	previous = 
+	previous = a655e75
