--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 84c3cd5
+	base = 5425c1b
 	trimbase = 
 	parent = debian/kinetic/rb1_base_pad
-	previous = 
+	previous = 84c3cd5
