--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 08fe80a
+	base = 619cc9c
 	trimbase = 
 	parent = debian/kinetic/rb1_base_common
-	previous = 
+	previous = 08fe80a
