--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4c565bb
+	base = dae4436
 	trimbase = 
 	parent = release/kinetic/rb1_base_description
-	previous = 
+	previous = 4c565bb
