--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4fbab43
+	base = 7100ad6
 	trimbase = 
 	parent = rpm/kinetic/rb1_base_description
-	previous = 
+	previous = 4fbab43
