--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1401c0c
+	base = c5722b9
 	trimbase = 
 	parent = rpm/kinetic/rb1_base_pad
-	previous = 
+	previous = 1401c0c
