--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eb6decd
+	base = 720a30e
 	trimbase = 
 	parent = rpm/kinetic/rb1_base_common
-	previous = 
+	previous = eb6decd
