--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_pad
-	base = 2b73651
-	trimbase = 
+	base = e9a31a1
+	trimbase = 2b73651
 	parent = upstream
 	previous = 70d0608
