--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_common
-	base = 27c7cd5
-	trimbase = 
+	base = 39c47c8
+	trimbase = 27c7cd5
 	parent = upstream
 	previous = 70d0608
