--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_description
 	base = 4c565bb
-	trimbase = 388a87c
+	trimbase = 
 	parent = upstream
 	previous = ad9f72f
