Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.4-0": ["Thu Jul 21 2016", "Roberto Guzm\u00e1n", "rguzman@robotnik.es"]}
+{"1.0.4-0": ["Thu Jul 21 2016", "Roberto Guzm\u00e1n", "rguzman@robotnik.es"], "1.0.5-0": ["Fri Jul 22 2016", "Roberto Guzm\u00e1n", "rguzman@robotnik.es"]}
