Imported upstream version '1.1.0' of 'upstream'

--- a/rb1_base_pad/CMakeLists.txt
+++ b/rb1_base_pad/CMakeLists.txt
@@ -55,3 +55,8 @@ install(
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(
+  DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
