--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_pad
-	base = 65cda4d
-	trimbase = 
+	base = 014c343
+	trimbase = 65cda4d
 	parent = upstream
 	previous = 7a8d676
