--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_common
-	base = 46bcdd2
-	trimbase = 
+	base = 571b362
+	trimbase = 46bcdd2
 	parent = upstream
 	previous = 7a8d676
