--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_description
 	base = 7d3cce8
-	trimbase = 7ecdded
+	trimbase = 
 	parent = upstream
 	previous = 70d0608
