--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_pad
-	base = 8071227
-	trimbase = 
+	base = 7b60b9a
+	trimbase = 8071227
 	parent = upstream
 	previous = 40ea9cc
