--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_common
-	base = 1b547f3
-	trimbase = 
+	base = ace3aed
+	trimbase = 1b547f3
 	parent = upstream
 	previous = 40ea9cc
