--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_description
-	base = b875080
-	trimbase = 
+	base = 34ec82b
+	trimbase = b875080
 	parent = upstream
 	previous = 40ea9cc
