--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_pad
-	base = e390dc7
-	trimbase = 
+	base = fa28db9
+	trimbase = e390dc7
 	parent = upstream
 	previous = cc12305
