--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_common
-	base = 75f265d
-	trimbase = 
+	base = a59fbd2
+	trimbase = 75f265d
 	parent = upstream
 	previous = cc12305
