--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_description
 	base = 4c4e82a
-	trimbase = a2e9291
+	trimbase = 
 	parent = upstream
 	previous = 7a8d676
