--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rb1_base_description
-	base = 1f486ca
-	trimbase = 
+	base = c8c1c51
+	trimbase = 1f486ca
 	parent = upstream
 	previous = cc12305
