--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c8c1c51
+	base = 51c5a19
 	trimbase = 
 	parent = release/kinetic/rb1_base_description
-	previous = 
+	previous = c8c1c51
