--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a1e8cf4
+	base = 077466c
 	trimbase = 
 	parent = arch/kinetic/rb1_base_description
-	previous = 
+	previous = a1e8cf4
