--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fa28db9
+	base = 15961fa
 	trimbase = 
 	parent = release/kinetic/rb1_base_pad
-	previous = 
+	previous = fa28db9
