--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 85dc60f
+	base = 2024d0b
 	trimbase = 
 	parent = arch/kinetic/rb1_base_pad
-	previous = 
+	previous = 85dc60f
