--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a59fbd2
+	base = b0d1abd
 	trimbase = 
 	parent = release/kinetic/rb1_base_common
-	previous = 
+	previous = a59fbd2
