--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1f76fea
+	base = 6973201
 	trimbase = 
 	parent = arch/kinetic/rb1_base_common
-	previous = 
+	previous = 1f76fea
